# brainiac

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  server.py
src/models/: types.py
src/services/: clients.py  db.py  ingestion.py
src/tools/: confluence.py  github.py  jira.py  knowledge.py
src/utils/: text.py
